--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <body>
     <h1>Servicio de Seguro</h1>
     <p>Bienvenido a nuestra página de seguros. Aquí nos especializamos en ofrecer una variedad de productos diseñados para protegerte a ti y a tu familia. Explora nuestras opciones y encuentra la cobertura que mejor se adapte a tus necesidades.</p>
+    <p>Contar con un seguro adecuado es fundamental para garantizar la estabilidad financiera ante imprevistos. Los seguros actúan como una red de protección que te permite afrontar situaciones difíciles, como accidentes, enfermedades o pérdidas materiales, sin que tu economía personal o familiar se vea gravemente afectada.</p>
+    <p>Además de la protección económica, los seguros brindan tranquilidad y confianza en el día a día. Saber que cuentas con respaldo ante cualquier eventualidad te permite tomar decisiones con mayor seguridad y enfocarte en tus objetivos personales y profesionales, sin el temor constante a los riesgos inesperados.</p>
+    <p>Invertir en un seguro es invertir en tu bienestar y en el de tus seres queridos. Ya sea un seguro de vida, de salud, de auto o de hogar, cada póliza está pensada para cubrir necesidades específicas y ofrecer soluciones adaptadas a cada etapa de la vida. Te invitamos a informarte y elegir la opción que mejor se ajuste a tu situación.</p>
     <p>LLM? read <a href="llms.txt">llms.txt</a>.</p>
 </body>
 </html>
